--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style media="screen">
+      img{width:200px;}
+    </style>
   </head>
   <body>
     <h1>お前ごときが調子に乗るな<h1>
       <h1>策士っすね―<h1>
         <h1>こんちゃー<h1>
+          <img src=https://th.bing.com/th/id/R.7e1563ad5f6ebf7c3b6b51150eb03bfb?rik=5w70HXZFiMLyfA&riu=http%3a%2f%2fwww.engiel.com%2fwp-content%2fuploads%2f2018%2f07%2fgif-applauso-3.gif&ehk=NnlmVKSJXFuB9YCpwS5fkdUTaDhSSo%2fRwbUVV2B4DIw%3d&risl=&pid=ImgRaw&r=0
   </body>
 </html>
